--- a/ShoppingCart05-Front End v 1/CustomerDetails.html
+++ b/ShoppingCart05-Front End v 1/CustomerDetails.html
@@ -4,7 +4,7 @@
             <title>
                 Customer Details
             </title>
-            <link rel = "stylesheet" href = "CustomerStylesheet.css">
+            <link rel = "stylesheet" href = "css and js/CustomerStylesheet.css">
         </head>
     <body>
             <div class = "main-container">
